--- a/components/SearchBar.css
+++ b/components/SearchBar.css
@@ -1,14 +1,22 @@
+/* USA NO INDEX */
 .group{
     display: flex; /* Utiliza flexbox para organizar os elementos em linha */
     justify-content: center;
     align-items: center; /* Alinha os itens verticalmente ao centro */
     width: 100%; /* Define a largura máxima como 100% */
+    margin-top: 17px;
 }
 
+/* USA NO RESULTS */
 .group-search-bar-result{
+    display: flex; /* Utiliza flexbox para organizar os elementos em linha */
+    justify-content: center;
+    align-items: center; /* Alinha os itens verticalmente ao centro */
+    width: 100%; /* Define a largura máxima como 100% */
     margin-top: 120px;
 }
 
+/* USA NO INDEX */
 .input-wrapper{
     background-color: var(--branco);
     border: solid 2px var(--preto);
@@ -23,9 +31,19 @@
     margin-left: 25px;
 }
 
+/* USA NO RESULTS */
 .input-wrapper-result{
+    background-color: var(--branco);
+    border: solid 2px var(--preto);
     width: 37%;
-    border-radius: 29.26px;
+    border-radius: 10px;
+    height: 2.9rem;
+    padding: 0 15px;
+    box-shadow: 0px 0px 8px #ddd;
+    display: flex;
+    align-items: center;
+    border-color: var(--preto);
+    margin-left: 25px;
 }
 
 input{
